added target pointers, updated ready-to-run cersion

--- a/tower_defense/tower_defense.vcxproj
+++ b/tower_defense/tower_defense.vcxproj
@@ -197,6 +197,7 @@
     <ClCompile Include="RocketLauncher.cpp" />
     <ClCompile Include="Ship.cpp" />
     <ClCompile Include="Shooter.cpp" />
+    <ClCompile Include="System.checkAbility.cpp" />
     <ClCompile Include="System.checkExplosions.cpp" />
     <ClCompile Include="System.checkOrders.cpp" />
     <ClCompile Include="System.checkWall.cpp" />
