--- a/tower_defense/tower_defense.vcxproj.filters
+++ b/tower_defense/tower_defense.vcxproj.filters
@@ -298,5 +298,8 @@
     <ClCompile Include="DrawSystem.cpp">
       <Filter>Source Files\draw</Filter>
     </ClCompile>
+    <ClCompile Include="System.checkAbility.cpp">
+      <Filter>Source Files\system\methods</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
