--- a/tower_defense/tower_defense.vcxproj
+++ b/tower_defense/tower_defense.vcxproj
@@ -150,6 +150,8 @@
     <ClInclude Include="getMilliCount.h" />
     <ClInclude Include="Gun.h" />
     <ClInclude Include="keys.h" />
+    <ClInclude Include="Laser.h" />
+    <ClInclude Include="LaserCarrier.h" />
     <ClInclude Include="Mouse.h" />
     <ClInclude Include="Mover.h" />
     <ClInclude Include="names.h" />
@@ -189,6 +191,8 @@
     <ClCompile Include="geometry.cpp" />
     <ClCompile Include="getMilliCount.cpp" />
     <ClCompile Include="Gun.cpp" />
+    <ClCompile Include="Laser.cpp" />
+    <ClCompile Include="LaserCarrier.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mouse.cpp" />
     <ClCompile Include="Mover.cpp" />
@@ -203,7 +207,9 @@
     <ClCompile Include="System.checkWall.cpp" />
     <ClCompile Include="System.collision.cpp" />
     <ClCompile Include="System.cpp" />
+    <ClCompile Include="System.damage.cpp" />
     <ClCompile Include="System.fillChunks.cpp" />
+    <ClCompile Include="System.getCell.cpp" />
     <ClCompile Include="System.getNeighbors.cpp" />
     <ClCompile Include="System.start.cpp" />
     <ClCompile Include="System.step.cpp" />
