--- a/tower_defense/tower_defense.vcxproj
+++ b/tower_defense/tower_defense.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="Engine.h" />
     <ClInclude Include="Exit.h" />
     <ClInclude Include="Explosion.h" />
+    <ClInclude Include="Gamepad.h" />
     <ClInclude Include="geometry.h" />
     <ClInclude Include="getMilliCount.h" />
     <ClInclude Include="Gun.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="Exit.cpp" />
     <ClCompile Include="Explosion.cpp" />
+    <ClCompile Include="Gamepad.cpp" />
     <ClCompile Include="geometry.cpp" />
     <ClCompile Include="getMilliCount.cpp" />
     <ClCompile Include="Gun.cpp" />
