--- a/space_sodomy_eternal/keys.conf
+++ b/space_sodomy_eternal/keys.conf
@@ -1,12 +1,12 @@
-Q Q END
-W W END
-E E END
-R R END
-A A END
-S S END
-D D END
-LEFT LEFT END
-RIGHT RIGHT END
-UP UP END
-DOWN DOWN END
-SPACE SPACE END
+MOVE_LEFT LEFT END
+MOVE_RIGHT RIGHT END
+MOVE_FORWARD W UP END
+MOVE_BACKWARD S DOWN END
+TURN_LEFT A END
+TURN_RIGHT D END
+SHOOT SPACE END
+STABILIZE_ROTATION SHIFT END
+RESTART R END
+ZOOM_IN E END
+ZOOM_OUT Q END
+
