--- a/SpaceSodomy/SpaceSodomy/SpaceSodomy.vcxproj.filters
+++ b/SpaceSodomy/SpaceSodomy/SpaceSodomy.vcxproj.filters
@@ -174,6 +174,9 @@
     <ClInclude Include="MenuButton.h">
       <Filter>Header Files\menu</Filter>
     </ClInclude>
+    <ClInclude Include="Generator.h">
+      <Filter>Header Files\system\classes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -343,6 +346,9 @@
     </ClCompile>
     <ClCompile Include="MenuButton.cpp">
       <Filter>Source Files\menu</Filter>
+    </ClCompile>
+    <ClCompile Include="Generator.cpp">
+      <Filter>Source Files\system\classes</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
